@@ -142,9 +142,6 @@
                     <compilerArgument>-Xlint:unchecked</compilerArgument>
                     <compilerArgument>-Xlint:deprecation</compilerArgument>
                     -->
-
-                    <!-- suppress warning about Unsafe functionality -->
-                    <compilerArgument>-XDignore.symbol.file</compilerArgument>
                     <fork>true</fork>
                     <source>1.8</source>
                     <target>1.8</target>
